feat: add db settings in .env.example

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
+###### [ DB Settings ] ########################
+DB_NAME=db_name                                                 DB_USER=db_user
+DB_PASSWORD=db_password
+
 ###### [ Discord Settings ] ########################
 DISCORD_API_KEY='Bot API key'
 DISCORD_SERVER_ID='0'
