--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,6 +23,9 @@ services:
     volumes:
       - ./vol:/app/data/
     restart: always
+    dns:
+      - 8.8.8.8
+      - 8.8.4.4
     depends_on:
       - db
     environment:
